--- a/apps/public-docsite-v9/public/shell.css
+++ b/apps/public-docsite-v9/public/shell.css
@@ -1,5 +1,14 @@
-/* remove margin from sidebar logo  */
+/*
+ HEADS UP!
+ This file lives in apps/public-docsite-v9/public/shell.css
+ This file is shared via symlink in web-components/public.
+ All CSS must apply to both React and Web Components implementations.
+*/
+
+/* sidebar logo (React uses an SVG, Web Components uses text) */
 .sidebar-header > div:first-of-type {
+  font-size: 20px; /* for Web Components */
+  white-space: break-spaces; /* allow line breaks "\n" in Storybook theme */
   margin-right: 0;
 }
 
@@ -45,6 +54,11 @@
 /* remove background preventing color splash from showing */
 #storybook-preview-wrapper {
   background: transparent;
+}
+
+/* remove 10px top space added to the main right hand side by Storybook */
+[role='main'] {
+  top: 0 !important;
 }
 
 /* remove box shadow style from storybooks wrapper div */
