feat(scripts-generators): update create-package to accomodate new preview versioning scheme for v9 react packages

--- a/scripts/generators/create-package/plop-templates-react/package.json.hbs
+++ b/scripts/generators/create-package/plop-templates-react/package.json.hbs
@@ -46,8 +46,7 @@
   "beachball": {
     "disallowedChangeTypes": [
       "major",
-      "minor",
-      "patch"
+      "prerelease"
     ]
   }
 }
