--- a/apps/public-docsite-v9/public/shell.css
+++ b/apps/public-docsite-v9/public/shell.css
@@ -1,5 +1,13 @@
-/* remove margin from sidebar logo  */
+/*
+ * HEADS UP!
+ * This file is used by both React v9 and Web Components Storybooks.
+ * All CSS must apply to both implementations.
+ */
+
+/* sidebar logo (React uses an SVG, Web Components uses text) */
 .sidebar-header > div:first-of-type {
+  font-size: 20px; /* for Web Components */
+  white-space: break-spaces; /* allow line breaks "\n" in Storybook theme */
   margin-right: 0;
 }
 
@@ -45,6 +53,12 @@
 /* remove background preventing color splash from showing */
 #storybook-preview-wrapper {
   background: transparent;
+}
+
+/* remove Storybook's 10px top on the main (right hand side) of the docs */
+/* this affects only whitespace in React v9 docs, but the theme switcher in Web Components */
+[role='main'] {
+  top: 0 !important;
 }
 
 /* remove box shadow style from storybooks wrapper div */
