fix: update description

--- a/apps/public-docsite-v9/public/shell.css
+++ b/apps/public-docsite-v9/public/shell.css
@@ -47,7 +47,10 @@
   background: transparent;
 }
 
-/* Set position fixed to create a layer and prevent iframe from jumping when context overflows */
+/*
+ * Set position fixed to create a layer and prevent iframe from jumping when content is
+ * larger than the viewport and the iframe itself
+ */
 [role='main'] {
   position: fixed;
 }
